tambah elemen oot

--- a/tes2.html
+++ b/tes2.html
@@ -10,33 +10,39 @@
     </style>
 </head>
 <body>
-<select>
-    <option value="1">1</option>
-    <option value="2">2</option>
-    <option value="3">3</option>
-</select>
+    <form>
+        <select id="select" onChange="this.form.submit">
+            <option value="0">--</option>
+            <option value="1">1</option>
+            <option value="2">2</option>
+            <option value="3">3</option>
+        </select>
+    </form>
 
 <div id="main">
     <div id="heading">
         <span>Error</span>
-        <span>KW2</span>
-        <span>KW3</span>
+        
     </div>
     <div id="row">
         <span>Error1</span>
-        <span><input type="text" size="6" name="err[]" /></span>
-        <span><input type="text" size="6" name="err[]" /></span>
-    </div>
-    <div id="row">
-        <span>Error2</span>
-        <span><input type="text" size="6" name="err[]" /></span>
-        <span><input type="text" size="6" name="err[]" /></span>
+        
     </div>
 </div>
 
 <script type="text/javascript" src="jquery.js"></script>
 <script type="text/javascript">
+$(document).ready(function(){
 
+    $("#select").change(function(){
+        var a = $("#select").val();
+        for(i = 0;i<a;i++){
+            $("div#heading").append("<span>KW2</span><span>KW3</span>");
+            $("div#row").append("<span><input type='text' size='6' name='err[]'' /></span><span><input type='text' size='6' name='err[]'' /></span>");
+        }
+    });
+
+});
 
 </script>
 </body>
